// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar should render component of a specified size 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "jsx-4265490818 avatar  ",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "jsx-4265490818 avatar-text",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should render correctly with an icon 1`] = `"<span class=\\"jsx-4176817858 avatar  \\"><span class=\\"jsx-4176817858 icon\\"><svg class=\\"\\"></svg></span></span>"`;

exports[`Avatar should render text element 1`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "jsx-4176817858 avatar  ",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "jsx-4176817858 avatar-text",
        },
        "children": Array [],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should render text element 2`] = `
initialize {
  "0": Node {
    "attribs": Object {
      "class": "jsx-4176817858 avatar  ",
    },
    "children": Array [
      Node {
        "attribs": Object {
          "class": "jsx-4176817858 avatar-text",
        },
        "children": Array [
          Node {
            "data": "text",
            "next": null,
            "parent": [Circular],
            "prev": null,
            "type": "text",
          },
        ],
        "name": "span",
        "namespace": "http://www.w3.org/1999/xhtml",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "class": undefined,
        },
        "x-attribsPrefix": Object {
          "class": undefined,
        },
      },
    ],
    "name": "span",
    "namespace": "http://www.w3.org/1999/xhtml",
    "next": null,
    "parent": Node {
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
    },
    "prev": null,
    "type": "tag",
    "x-attribsNamespace": Object {
      "class": undefined,
    },
    "x-attribsPrefix": Object {
      "class": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Avatar should work correctly with different sizes 1`] = `"<div><span class=\\"jsx-1063767362 avatar  \\"><span class=\\"jsx-1063767362 avatar-text\\"></span></span><span class=\\"jsx-2166814146 avatar  \\"><span class=\\"jsx-2166814146 avatar-text\\"></span></span><span class=\\"jsx-4176817858 avatar  \\"><span class=\\"jsx-4176817858 avatar-text\\"></span></span><span class=\\"jsx-1785224386 avatar  \\"><span class=\\"jsx-1785224386 avatar-text\\"></span></span><span class=\\"jsx-3686287650 avatar  \\"><span class=\\"jsx-3686287650 avatar-text\\"></span></span></div>"`;

exports[`Avatar should work with a gradient color 1`] = `"<span class=\\"jsx-4209686791 avatar  \\"><span class=\\"jsx-4209686791 avatar-text\\"></span></span>"`;

exports[`Avatar should work with different colors 1`] = `"<div><span class=\\"jsx-3157136048 avatar  \\"><span class=\\"jsx-3157136048 avatar-text\\"></span></span><span class=\\"jsx-4098170180 avatar  \\"><span class=\\"jsx-4098170180 avatar-text\\"></span></span><span class=\\"jsx-572673372 avatar  \\"><span class=\\"jsx-572673372 avatar-text\\"></span></span><span class=\\"jsx-4152143559 avatar  \\"><span class=\\"jsx-4152143559 avatar-text\\"></span></span><span class=\\"jsx-2989927891 avatar  \\"><span class=\\"jsx-2989927891 avatar-text\\"></span></span></div>"`;

exports[`Avatar should work with pointer 1`] = `"<span class=\\"jsx-1563297974 avatar  \\"><span class=\\"jsx-1563297974 avatar-text\\"></span></span>"`;

exports[`Avatar should work with zoomed 1`] = `"<span class=\\"jsx-1415796367 avatar  \\"><span class=\\"jsx-1415796367 avatar-text\\"></span></span>"`;
